kubernetes/manifests/generated/applications/1-manifest/statefulset-applications-graphql-mongo-database-arbiter.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"labels":{"app.kubernetes.io/component":"arbiter","app.kubernetes.io/instance":"graphql-mongo-database","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"mongodb","helm.sh/chart":"mongodb-11.0.3"},"name":"graphql-mongo-database-arbiter","namespace":"applications"},"spec":{"selector":{"matchLabels":{"app.kubernetes.io/component":"arbiter","app.kubernetes.io/instance":"graphql-mongo-database","app.kubernetes.io/name":"m [...]
  labels:
    app.kubernetes.io/component: arbiter
    app.kubernetes.io/instance: graphql-mongo-database
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-11.0.3
  name: graphql-mongo-database-arbiter
  namespace: applications
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: arbiter
      app.kubernetes.io/instance: graphql-mongo-database
      app.kubernetes.io/name: mongodb
  serviceName: graphql-mongo-database-arbiter-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/component: arbiter
        app.kubernetes.io/instance: graphql-mongo-database
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mongodb
        helm.sh/chart: mongodb-11.0.3
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: arbiter
                  app.kubernetes.io/instance: graphql-mongo-database
                  app.kubernetes.io/name: mongodb
              namespaces:
              - applications
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: MY_POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: K8S_SERVICE_NAME
          value: graphql-mongo-database-arbiter-headless
        - name: MONGODB_REPLICA_SET_MODE
          value: arbiter
        - name: MONGODB_INITIAL_PRIMARY_HOST
          value: graphql-mongo-database-0.graphql-mongo-database.$(MY_POD_NAMESPACE).svc.cluster.local
        - name: MONGODB_REPLICA_SET_NAME
          value: rs0
        - name: MONGODB_ADVERTISED_HOSTNAME
          value: $(MY_POD_NAME).$(K8S_SERVICE_NAME).$(MY_POD_NAMESPACE).svc.cluster.local
        - name: MONGODB_INITIAL_PRIMARY_ROOT_USER
          value: root_user
        - name: MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mongodb-root-password
              name: graphql-mongo-database
        - name: MONGODB_REPLICA_SET_KEY
          valueFrom:
            secretKeyRef:
              key: mongodb-replica-set-key
              name: graphql-mongo-database
        - name: ALLOW_EMPTY_PASSWORD
          value: "no"
        image: docker.io/bitnami/mongodb:4.4.12-debian-10-r12
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: mongodb
          timeoutSeconds: 5
        name: mongodb-arbiter
        ports:
        - containerPort: 27017
          name: mongodb
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: mongodb
          timeoutSeconds: 5
        resources:
          limits: {}
          requests: {}
        securityContext:
          runAsUser: 1001
      securityContext:
        fsGroup: 1001
        sysctls: []
      serviceAccountName: graphql-mongo-database
