kubernetes/manifests/generated/applications/1-manifest/statefulset-applications-graphql-mongo-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"labels":{"app.kubernetes.io/component":"mongodb","app.kubernetes.io/instance":"graphql-mongo-database","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"mongodb","helm.sh/chart":"mongodb-11.0.3"},"name":"graphql-mongo-database","namespace":"applications"},"spec":{"podManagementPolicy":"OrderedReady","replicas":3,"selector":{"matchLabels":{"app.kubernetes.io/component":"mongodb","app.kubernetes.io/instance":"graphql-m [...]
  labels:
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: graphql-mongo-database
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-11.0.3
  name: graphql-mongo-database
  namespace: applications
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: mongodb
      app.kubernetes.io/instance: graphql-mongo-database
      app.kubernetes.io/name: mongodb
  serviceName: graphql-mongo-database
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mongodb
        app.kubernetes.io/instance: graphql-mongo-database
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mongodb
        helm.sh/chart: mongodb-11.0.3
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: mongodb
                  app.kubernetes.io/instance: graphql-mongo-database
                  app.kubernetes.io/name: mongodb
              namespaces:
              - applications
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - command:
        - /scripts/setup.sh
        image: docker.io/bitnami/mongodb:4.4.12-debian-10-r12
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - mongo
            - --disableImplicitSessions
            - --eval
            - db.adminCommand('ping')
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
        readinessProbe:
          exec:
            command:
            - bash
            - -ec
            - |
              # Run the proper check depending on the version
              [[ $(mongo --version | grep "MongoDB shell") =~ ([0-9]+\.[0-9]+\.[0-9]+) ]] && VERSION=${BASH_REMATCH[1]}
              . /opt/bitnami/scripts/libversion.sh
              VERSION_MAJOR="$(get_sematic_version "$VERSION" 1)"
              VERSION_MINOR="$(get_sematic_version "$VERSION" 2)"
              VERSION_PATCH="$(get_sematic_version "$VERSION" 3)"
              if [[ "$VERSION_MAJOR" -ge 4 ]] && [[ "$VERSION_MINOR" -ge 4 ]] && [[ "$VERSION_PATCH" -ge 2 ]]; then
                  mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.hello().isWritablePrimary || db.hello().secondary' | grep -q 'true'
              else
                  mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.isMaster().ismaster || db.isMaster().secondary' | grep -q 'true'
              fi
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits: {}
          requests: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - mountPath: /bitnami/mongodb
          name: datadir
        - mountPath: /scripts/setup.sh
          name: scripts
          subPath: setup.sh
      securityContext:
        fsGroup: 1001
        sysctls: []
      serviceAccountName: graphql-mongo-database
      volumes:
      - configMap:
          defaultMode: 493
          name: graphql-mongo-database-scripts
        name: scripts
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 0.1Gi
      storageClassName: linode-block-storage-retain
