kubernetes/manifests/generated/applications/1-manifest/service-applications-graphql-mongo-database.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"mongodb","app.kubernetes.io/instance":"graphql-mongo-database","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"mongodb","helm.sh/chart":"mongodb-11.0.3"},"name":"graphql-mongo-database","namespace":"applications"},"spec":{"clusterIP":"None","ports":[{"name":"mongodb","port":27017,"targetPort":"mongodb"}],"publishNotReadyAddresses":true,"selector":{"app.kubernetes.io/component":"mongod [...]
  labels:
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: graphql-mongo-database
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-11.0.3
  name: graphql-mongo-database
  namespace: applications
spec:
  clusterIP: None
  ports:
  - name: mongodb
    port: 27017
    targetPort: mongodb
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: graphql-mongo-database
    app.kubernetes.io/name: mongodb
  type: ClusterIP
