kubernetes/manifests/generated/applications/1-manifest/service-applications-react-web.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi"},"name":"react-web","namespace":"applications"},"spec":{"ports":[{"name":"react-web-http","port":3000,"protocol":"TCP","targetPort":3000}],"selector":{"app":"react"},"type":"ClusterIP"}}
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: react-web
  namespace: applications
spec:
  ports:
  - name: react-web-http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: react
  type: ClusterIP
