kubernetes/manifests/generated/applications/1-manifest/service-applications-redis-database-master.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"master","app.kubernetes.io/instance":"redis","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"redis","helm.sh/chart":"redis-16.4.5"},"name":"redis-database-master","namespace":"applications"},"spec":{"ports":[{"name":"tcp-redis","port":6379,"targetPort":"redis"}],"selector":{"app.kubernetes.io/component":"master","app.kubernetes.io/instance":"redis","app.kubernetes.io/name":"redis"},"t [...]
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: redis
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-16.4.5
  name: redis-database-master
  namespace: applications
spec:
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: redis
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: redis
  type: ClusterIP
