kubernetes/manifests/generated/applications/1-manifest/ingress-applications-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/ssl-redirect":"false","nginx.ingress.kubernetes.io/use-regex":"true"},"labels":{"app.kubernetes.io/managed-by":"pulumi"},"name":"nginx-ingress","namespace":"applications"},"spec":{"ingressClassName":"nginx","rules":[{"host":"localhost","http":{"paths":[{"backend":{"service":{"name":"react-web","port":{"number":3000}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"g [...]
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: nginx-ingress
  namespace: applications
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: react-web
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: graphql-mongo
            port:
              number: 8000
        path: /graphql
        pathType: Prefix
